
Changelog
=========

4.2.0 (unreleased)
------------------

- XlsSource: Handle values that are already a valid term for vocabulary fields.
  [lgraf]

- XlsSource: Raise KeyError if a value can't be found in the translation mapping
  for fields with a vocabulary, instead of just setting the translated value anyway.
  [lgraf] 

- XlsSource: Add some more alternate spellings for archival_value mapping.
  [lgraf]

- Move items: handle twice submitted forms or invalid selected paths.
  [phgross]

- Fix and rework dossier deactivation and activation.
  [phgross]

- Add initial meeting support.
    - Add Proposal content type (proxies) and model.
    - Add feature flag, disable meeting feature by default.
    - Add Committee content type (proxy) and model.
    - Add custom forms to create/edit proxy-supported entities.
    - Add custom workflow implementation (no plone workflow).
    - Add a context manager to temporarily change the security context.
    - Add meeting model and forms.
    - Add schedule meeting action to committee.
    - Add scheduling of proposals as agenda items.
    - Add better committee page displaying meetings and submitted proposals.
    - Add custom content-views viewlet to display correct edit links for models.
    - Add custom pathbar viewlet which can display sql-models.
    - Add paragraph and custom text agenda items.
    - Make agenda items deletable.
    - Add a form to create a pre-protocols for meetings.

  [deiferni]

- Dossier workflow: Also allow Administrator role to activate deactivated
  dossiers.
  [lgraf]

- OrgUnitSelector: Fix fallback logic:

  Build intersection of current admin units' org units and
  user's org units. If some of the user's org units are in the
  current admin unit, use the first of those as the fallback.

  Otherwise we're in an inter-admin unit operation, default to
  current admin unit's first org unit.
  [lgraf]

- CookieStorage: Extend max age of cookies to 30 days (was