@@ -5,12 +5,16 @@ Changelog
 4.2.0 (unreleased)
 ------------------
 
+- Only show "Paste" action if objects in clipboard are in allowed addable
+  types of target container.
+  [lgraf]
+
 - XlsSource: Handle values that are already a valid term for vocabulary fields.
   [lgraf]
 
 - XlsSource: Raise KeyError if a value can't be found in the translation mapping
   for fields with a vocabulary, instead of just setting the translated value anyway.
-  [lgraf] 
+  [lgraf]
 
 - XlsSource: Add some more alternate spellings for archival_value mapping.
   [lgraf]
